tests/fixtures/invalid/pow_bytes_bytes_str.py
# Cannot call pow() with Bytes, Bytes, Str
x = pow(b"hello", b"hello", "hello")
